# Simulboot

./: .gitignore  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  README.md  SIMULBOOT_HANDOFF.md  SKELETONS.md  alternatives.md  deny.toml
.github/workflows/: ci.yml
docs/: denotation.md  testing-macos.md
docs/persistence/: galois-connection.md  reference_check.py  session-base-v1.xsd  session-coefficients-v1.xsd
docs/plans/: 0000-roadmap.md  0001-capture-backends.md  0002-async-runtime.md  README.md
simulboot-broker/: Cargo.toml
simulboot-broker/src/: lib.rs  main.rs
simulboot-client/: Cargo.toml
simulboot-client/src/: conn.rs  main.rs  net.rs  render.rs  strip.rs
simulboot-client/src/session/: mod.rs
simulboot-common/: Cargo.toml
simulboot-common/src/: coefficients.rs  galois.rs  lib.rs  session.rs  wire.rs
simulboot-common/tests/: galois_laws.rs
simulboot-host/: Cargo.toml
simulboot-host/src/: capture.rs  main.rs  net.rs
simulboot-host/src/linux/: mod.rs
simulboot-host/src/macos/: mod.rs
simulboot-host/src/windows/: mod.rs
