[package]
name = "simulboot-broker"
description = "Minimal HTTP server that serves a suspended session image (v0 broker)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "simulboot-broker"
path = "src/main.rs"

[dependencies]
simulboot-common.workspace = true
smol.workspace = true
async-channel.workspace = true
ctrlc.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
