[package]
name = "simulboot-client"
description = "simulboot compositor: unifies remote surfaces into a scrollable strip and owns session suspend/resume"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "simulboot-client"
path = "src/main.rs"

[dependencies]
simulboot-common.workspace = true
simulboot-broker.workspace = true
smol.workspace = true
async-channel.workspace = true
ctrlc.workspace = true
quinn.workspace = true
bytes.workspace = true
postcard.workspace = true
rustls.workspace = true
rcgen.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# --- Rendering / decode backend (macOS compositor) ---
# Kept out of the default build so the cross-platform strip/session/network
# logic compiles and tests anywhere. The Metal renderer and VideoToolbox decoder
# (build-order week 3) plug into the `render::Renderer` trait.
# wgpu = "0.20"
# winit = "0.29"
# ffmpeg-next = "7"
