[package]
name = "simulboot-common"
description = "Shared wire-protocol and session-image types for simulboot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
bincode.workspace = true
quick-xml.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
